# devnet_assoc

./: .gitignore  .gitmodules  README.md  ansible.cfg  main.py  pyproject.toml
aci/: error.txt  get_tenants.py  pyproject.toml
nx-os/device_inventory_health/: main.py  output.json
scripts/: baseline.py
scripts/apis/: swapi.py
scripts/apis/flaskapi/: my_api.py
scripts/apis/flaskapi/classes/: mycar.py
scripts/netbox/cisco-ospf-v1/: cisco-ospf-v1.yml  connections.py  main.py
scripts/netbox/cisco-ospf-v2/: connection.py  main.py
scripts/netconf/: nc_interface.py  nc_loopback.py
scripts/restconf/: curl.sh  restconf.py
scripts/sd-wan/: get-devices.py
topologies/: baseline-test.clab.yaml
topologies/multi-site-ospf/: README.md  multi-site.clab.drawio  multi-site.clab.yaml  multi-site.clab.yaml.annotations.json
topologies/multi-site-ospf/ansible/: ansible.cfg  inventory.yml  ospf.yml  tmp.txt
topologies/multi-site-ospf/ansible/group_vars/: routers.yml
topologies/multi-site-ospf/ansible/host_vars/: br1-dist.yml  br1-wan.yml  br2-dist.yml  br2-wan.yml  core1.yml  core2.yml  hq-dist.yml
topologies/multi-site-ospf/ansible/playbooks/: interfaces.yml  ospf.yml
topologies/multi-site-ospf/cfgs/: br1-acc1.cfg  br1-acc2.cfg  br1-dist.cfg  br1-wan.cfg  br2-acc1.cfg  br2-acc2.cfg  br2-dist.cfg  br2-wan.cfg  core1.cfg  core2.cfg  hq-acc1.cfg  hq-acc2.cfg  hq-dist.cfg
topologies/ospf/: multi-site.clab.yaml  ospf-simple.clab.yaml
